gcc/testsuite/rust/rustc/ui/extoption_env-too-many-args.rs
fn main() { option_env!("one", "two"); } // { dg-error "" "" { target *-*-* } }

